implement competitor fetching
